crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_packages_distributions.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_packages_distributions/main.py
---
packages:
  - provider==1.0
count: 1
