crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_partial_import_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_partial_import_module/main.py
---
packages:
  - partial-pkg
count: 1
