crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_pep562.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pep562/main.py
---
packages:
  - lazy-pkg
count: 1
