crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_pep562_destructured.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pep562_destructured/main.py
---
packages:
  - destructured-hook-pkg
count: 1
