crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_pep562_walrus.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pep562_walrus/main.py
---
packages:
  - walrus-hook-pkg
count: 1
