crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_pkg_resources.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pkg_resources/main.py
---
packages:
  - pkg-resources-shim
  - res-pkg
count: 2
