crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_pkgutil_data.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pkgutil_data/main.py
---
packages:
  - pkgutil-pkg
count: 1
